Add social media icons

--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
                             </div>
                             <div class="wow fadeInDown">
                             	<p>
-                            		To get latest updates about our app please sign up to our newsletter.
+                            		To get latest updates about our app kindly follow us on our social media.
                             	</p>
                             </div>
                             <div class="subscribe wow fadeInDown">
-			                    <form class="form-inline" action="assets/subscribe.php" method="post">
-			                        <input type="text" name="email" placeholder="Enter your email..." class="subscribe-email">
-			                        <button type="submit" class="btn">Subscribe</button>
-			                    </form>
-			                    <div class="success-message"></div>
-			                    <div class="error-message"></div>
+			                    <div class="">
+                                    <span><a href="https://www.instagram.com/myactivityghana/" target=”_blank”><img src="assets/img/instagram.png" width="80px" ></img></a></span>
+                                    <span><a href="https://twitter.com/myactivityghana" target=”_blank”><img src="assets/img/twitter.png" width="80px" ></img></a></span>
+                                    <span><a href="https://web.facebook.com/myactivityghana" target=”_blank”><img src="assets/img/facebook.png" width="80px" ></img></a></span>
+                                </div>
 			                </div>
                         </div>
                     </div>
